portfolio en ligne

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                 <noscript>
                     <p style="position:relative;top:20px;color:red;font-weight: bold;"><!-- <<<style -->
                       ///JAVASCRIPT DESACTIVE\\\ javascript indispensable ! Veuillez activer javascript.
-                    <a href="https://support.google.com/adsense/answer/12654?hl=fr">Aide</a>
+                    <a target="_blank" href="https://support.google.com/adsense/answer/12654?hl=fr">Aide</a>
                     </p>
                 </noscript>
                 <!-- DIAGRAM TECHS ARRAY -->
@@ -77,8 +77,8 @@
                 <div class="portfolioArticles" id="portfolioArticles1"><h2 class="portfolioArticlesTitle" id="portfolioArticlesTitle1">Roomplay</h2></div>
                 <div class="portfolioArticles" id="portfolioArticles2"><h2 class="portfolioArticlesTitle" id="portfolioArticlesTitle2">Animes</h2></div>
                 <div class="portfolioArticles" id="portfolioArticles3"><h2 class="portfolioArticlesTitle" id="portfolioArticlesTitle3">Bricoles</h2></div>
-                <div class="portfolioArticles" id="portfolioArticles4"><h2 class="portfolioArticlesTitle" id="portfolioArticlesTitle4"></h2>A venir</div>
-                <div class="portfolioArticles" id="portfolioArticles5"><h2 class="portfolioArticlesTitle" id="portfolioArticlesTitle5"></h2>A venir</div>
+                <div class="portfolioArticles" id="portfolioArticles4"><h2 class="portfolioArticlesTitle" id="portfolioArticlesTitle4">A venir</h2></div>
+                <div class="portfolioArticles" id="portfolioArticles5"><h2 class="portfolioArticlesTitle" id="portfolioArticlesTitle5">A venir</h2></div>
                 <div class="portfolioArticles" id="portfolioArticles6"><h2 class="portfolioArticlesTitle" id="portfolioArticlesTitle6">A venir</h2></div>
                 <!--PRESENTATION-->
                 <div class="navigationPage" id="pagePresentation">
@@ -228,23 +228,27 @@
                 <!--COORDONNEES-->
                 <div class="navigationPage" id="pageContactInformation">
                     <div class="boxContactInformation">
-                        <h1 class="contactInformationTitle">ADRESSE</h1>
-                            <h3 class="contactInformation"><em>22 Avenue JEAN XXIII</em></h3>___
-                        <h1 class="contactInformationTitle">CODE POSTAL</h1>
-                            <h3 class="contactInformation"><em>78260</em></h3>___
-                        <h1 class="contactInformationTitle">VILLE</h1>
-                            <h3 class="contactInformation"><em>ACHERES</em></h3>___
-                        <h1 class="contactInformationTitle">TELEPHONE</h1>
-                            <h3 class="contactInformation"><em>07.67.02.21.04</em></h3>___
-                        <h1 class="contactInformationTitle">E-MAIL</h1>
-                            <h3 class="contactInformation"><em>blanchard.pierre.78@gmail.com</em></h3>___
-                    </div>
-                    <!-- MAP -->
-                    <div class="mapouter">
-                        <div class="gmap_canvas">
-                            <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=22%20avenue%20JEAN%20XXIII%20ACHERES&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+                        <div class="contactInformationText">
+                            <h1 class="contactInformationTitle">ADRESSE</h1>
+                                <h3 class="contactInformation"><em>22 Avenue JEAN XXIII</em></h3>___
+                            <h1 class="contactInformationTitle">CODE POSTAL</h1>
+                                <h3 class="contactInformation"><em>78260</em></h3>___
+                            <h1 class="contactInformationTitle">VILLE</h1>
+                                <h3 class="contactInformation"><em>ACHERES</em></h3>___
+                            <h1 class="contactInformationTitle">TELEPHONE</h1>
+                                <h3 class="contactInformation"><em>07.67.02.21.04</em></h3>___
+                            <h1 class="contactInformationTitle">E-MAIL</h1>
+                                <h3 class="contactInformation"><em>blanchard.pierre.78@gmail.com</em></h3>___
                         </div>
-                    </div><!-- END "mapouter" -->
+
+                        <!-- MAP -->
+                        <div class="mapouter">
+                            <div class="gmap_canvas">
+                                <iframe width="700" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=22%20avenue%20JEAN%20XXIII%20ACHERES&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+                            </div>
+                        </div>
+                    </div>
+
                     <button type="button" class="buttonBackNavigation" id="buttonBackNavigation3">RETOUR</button>
                 </div>
 
@@ -290,6 +294,9 @@
                     <a href="https://i.redd.it/s8ev4pw1p4a61.jpg" target = "_blank" rel = "noreferrer">Array Cheatsheet</a><br>
                 </div>
             </div><!--END "sidebars"-->
+            <footer>
+                <div class="mentions"></div>
+            </footer>
         <script src="portfolio.js"></script>
         <script src="clock.js"></script>
         <script src="theme.js"></script>
