--- a/roomplay/roomplay.html
+++ b/roomplay/roomplay.html
@@ -1,13 +1,4 @@
 <!DOCTYPE html>
-<!--NAVIGATION-->
-<!--SIDEBAR LEFT-->
-<!--PORTFOLIO-->
-<!--PRESENTATION-->
-<!--CV-->
-<!--CONTACT INFORMATION-->
-<!--PROJECTS-->
-<!--SIDEBAR RIGHT-->
-<!--PORTFOLIO 2-->
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -15,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RoomPlay</title>
     <link rel="shortcut icon" href="Img/onglet.jpg">
-    <link rel="stylesheet" href="roomplay.css">
-    <!-- <link rel="stylesheet" href="responsive.css"> -->
+    <link rel="stylesheet" href="styles/index.css">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -25,48 +15,49 @@
     />
 </head>
     <body class="body">
-<!--PORTFOLIO 2-->
-        <header class="headerRoomplay 
+        <header class="
+            headerRoomplay 
             container-fluid
             d-flex
             flex-column
             flex-sm-row
-            ">
-                <!-- <div class="logo row">
-                    <span class="author">BLANCHARD</span><br><span class="author">PIERRE</span><span class="banner">ROOMPLAY</span>    
-                </div> -->
+            justify-content-space-around
+            align-items-center
+        ">
+            <div class="logo">
+                <span class="author">BLANCHARD</span><br>
+                <span class="author">PIERRE</span>
+                <span class="banner"><h1>ROOMPLAY</h1></span>    
+            </div>
 
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-airplane-engines-fill m-3" viewBox="0 0 16 16">
-                    <path d="M8 0c-.787 0-1.292.592-1.572 1.151A4.347 4.347 0 0 0 6 3v3.691l-2 1V7.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.191l-1.17.585A1.5 1.5 0 0 0 0 10.618V12a.5.5 0 0 0 .582.493l1.631-.272.313.937a.5.5 0 0 0 .948 0l.405-1.214 2.21-.369.375 2.253-1.318 1.318A.5.5 0 0 0 5.5 16h5a.5.5 0 0 0 .354-.854l-1.318-1.318.375-2.253 2.21.369.405 1.214a.5.5 0 0 0 .948 0l.313-.937 1.63.272A.5.5 0 0 0 16 12v-1.382a1.5 1.5 0 0 0-.83-1.342L14 8.691V7.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v.191l-2-1V3c0-.568-.14-1.271-.428-1.849C9.292.591 8.787 0 8 0Z"/>
-                </svg>
+            <div class="
+                boxText 
+                row-col-4 
+                d-flex 
+                flex-column
+                flex-xl-row
+                justify-content-center align-items-center
+                justify-content-xl-space-around 
+                m-2
+            ">
+
+                <h1 class="m-1 m-sm-2">BIENVENUE !</h1>
 
                 <div class="
-                    boxText 
-                    row-col-3 
-                    d-flex 
+                    row
+                    d-flex
                     flex-column
-                    flex-xl-row
-                    justify-content-center align-items-center
-                    justify-content-xl-space-around 
-                    m-3
-                    p-1
+                    justify-content-center
+                    align-items-center
+                    m-0
+                    m-sm-2
                 ">
-
-                    <h1 class="m-3 text-center">BIENVENUE !</h1>
-
                     <div class="
-                        row
+                        boxPhoto
                         d-flex
                         flex-column
-                        justify-content-center
                         align-items-center
                     ">
-                        <div class="
-                            boxPhoto
-                            d-flex
-                            flex-column
-                            align-items-center
-                        ">
                         <p class="
                             boxMessage
                             d-flex
@@ -74,98 +65,95 @@
                             align-items-center
                             text-center
                         "></p>
-                        </div>
-                    </div>
-
-                    <div class='boxTechs row-col d-flex flex-lg-row flex-xl-column flex-xxl-row'>
-                        <img class="imgTechs" src="img/techs/html5.png" alt="Logo HTML5"/>
-                        <img class="imgTechs" src="img/techs/css3.png" alt="Logo CSS3"/>
-                        <img class="imgTechs" src="img/techs/js.png" alt="Logo JAVASCRIPT"/>
-                        <img class="imgTechs" src="img/techs/sass.png" alt="Logo SASS"/>
-                        <img class="imgTechs" src="img/techs/bootstrap.png" alt="Logo SASS"/>
                     </div>
                 </div>
 
-                <div class="
-                    BoxButtonsNavigationroomplay
-                    row-col
+                <div class='
+                    boxTechs
+
                     d-flex
-                    flex-row
-                ">
-                    <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplaya">Qui suis-je ?</button>
-                    <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplayb">Projets</button>
-                    <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplayc">Liens utiles</button>
-                    <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplayd">VS</button>
-                    <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplaye" onclick="window.location.href = 'ctc.html'">Me contacter</button>
+                    flex-column
+                    flex-sm-row
+                    m-1
+                    m-sm-3
+                    flex-xl-column
+                    flex-xxl-row
+                '>
+                    <img class="imgTechs" src="img/techs/html5.png" alt="Logo HTML5"/>
+                    <img class="imgTechs" src="img/techs/css3.png" alt="Logo CSS3"/>
+                    <img class="imgTechs" src="img/techs/js.png" alt="Logo JAVASCRIPT"/>
+                    <img class="imgTechs" src="img/techs/sass.png" alt="Logo SASS"/>
+                    <img class="imgTechs" src="img/techs/bootstrap.png" alt="Logo SASS"/>
                 </div>
+            </div><!-- END BOXTEXT -->
 
-        </header><!-- END header -->
-
-        <div class="roomplayArticlesBox">
-            <div class="roomplayArticles" id="roomplayArticles1" onclick="window.location.href = 'sgquizz/index.html'">
-                    <img class="roomplayArticlesImage" id="roomplayArticlesImage1" src="img/articles/sgquizz.jpg" alt="sgquizz.jpg">
-                <div >
-                    <h1>SG-Quizz</h1>
-                    <p>
-                        Le Sg-Quizz est ma première idée de concept suffisament simple pour m'aider a me lancer dans le developpement.
-                    </p>
-                    <p>
-                        Il contient pas loin de cent questions sur le thème de la série TV de science-fiction Stargate SG-1, 
-                        avec la possibilité d'enregistrement de 3 profils de joueurs avec noms, grades et score evolutifs, et est régit dynamiquement par javascript.
-                    </p>
-                </div>
+            <div class="
+                BoxButtonsNavigationroomplay
+                row-col
+                d-flex
+                flex-column
+                flex-xxl-row
+            ">
+                <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplaya">Qui suis-je ?</button>
+                <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplayb">Projets</button>
+                <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplayc">Liens utiles</button>
+                <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplayd">VS</button>
+                <button type="button" class="buttonNavigationroomplay" id="buttonNavigationroomplaye" onclick="window.location.href = 'ctc.html'">Me contacter</button>
             </div>
 
-            <div class="roomplayArticles" id="roomplayArticles2" onclick="window.location.href = 'batnav/index.html'">
-                    <img class="roomplayArticlesImage" id="roomplayArticlesImage2" src="img/articles/batnav.jpg" alt="batnav.jpg">
-                <div id="roomplayArticlesText2">
-                    <h1>Bataille Navale</h1>
-                    <p>
-                        Une bataille navale en javascript.
-                    </p>
-                    <p>
-                        Il reste encore a developper la réponse automatique (IA) qui se contente de frapper au hasard sans aucune stratégie...
-                    </p>
-                    <p>
-                        Des connaissances restent a acquérir.
-                    </p>
+        </header>
+
+        <div class="
+            roomplayArticleBox
+            container
+            d-flex
+            flex-column
+            flex-sm-row
+            justify-content-center
+            align-items-center
+            mt-1
+            mt-sm-5
+            m-auto
+            p-3
+        ">
+            <div 
+                class="
+                roomplayArticlePlace
+                d-flex
+                flex-column
+                justify-content-center
+                align-items-center
+            ">
+                <div 
+                    class="
+                        roomplayArticle
+                        justify-content-center
+                        align-items-center
+                        d-flex
+                        flex-column
+                        flex-md-row
+                        text-center
+                        text-md-start" 
+                >
+                    <img class="roomplayArticleImage  row col-5 m-3" src="" alt="">
+                    <div class="roomplayArticleText">
+                        <h1 class="articleTitle"></h1>
+                        <p class="articlePara1"></p>
+                        <p class="articlePara2"></p>
+                    </div>
                 </div>
+
+            </div>  
+            
+            <div class="boxButtonScroll d-flex flex-row flex-sm-column">
+                <div class="buttonScroll" id="buttonScrollUp">&uarr;</div>
+                <div class="buttonScroll" id="buttonScrollDown">&darr;</div>
             </div>
 
-            <div class="roomplayArticles" id="roomplayArticles3" onclick="window.location.href = 'machine/index.html'">
-                    <img class="roomplayArticlesImage" id="roomplayArticlesImage3" src="img/articles/mach.jpg" alt="mach.jpg">
-                <div id="roomplayArticlesText3">
-                    <h1>Machine a sous</h1>
-                    <p>
-                        Un petit programme simulant une machine a sous en javascript.
-                        Reste encore a améliorer les taux de gains beaucoup trop elevés.
-                    </p>
-                </div>
-            </div>
+        </div><!-- END ROMMPLAYARTICLEBOX -->
 
-            <div class="roomplayArticles" id="roomplayArticles4" onclick="window.location.href = 'gobelinthief/index.html'">
-                    <img class="roomplayArticlesImage" id="roomplayArticlesImage4" src="img/articles/gobelinthief.jpg" alt="gobelinthief.jpg">
-                <div id="roomplayArticlesText4">
-                    <h1>Gobelin Thief</h1>
-                    <p>
-                        Un petit jeu de role fantasy. En production.
-                    </p>
-                </div>
-            </div>
-
-            <div class="roomplayArticles" id="roomplayArticles5" onclick="window.location.href = 'snake/index.html'">
-                    <img class="roomplayArticlesImage" id="roomplayArticlesImage5" src="" alt="snake/index.html">
-                <div id="roomplayArticlesText5">
-                    <h1>Snake</h1>
-                    <p>
-                        Le célèbre jeu mobile. En production.
-                    </p>
-                </div>
-            </div>
-
-        </div><!-- END "portfolio2ArticlesBox" -->
-
-        <script src="roomplay.js"></script>
+        <script src="article.js"></script>
+        <script src="header.js"></script>
         <script src="lum.js"></script>
         <script src="vs.js"></script>
         <!-- <script src="pointers/keyPointer.js"></script> -->
